# meeting-recorder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KEY.gpg  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-footer.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apt-repo.yml  ci.yml  release.yml
debian/: changelog  control  copyright  postinst  prerm  rules
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-all/: Packages
docs/: APT-REPO.md  PPA.md
meeting_recorder/: __init__.py  __main__.py  audio.py  config.py  controller.py  default_config.json  detector.py  notifier.py  recorder.py  recording_widget.py  region_select.py  screencast.py  settings_gui.py  tray_indicator.py  utils.py
packaging/: apt-index.html  build-apt-repo.sh  build-deb.sh  control  copyright  meeting-recorder-settings.desktop  meeting-recorder.1  meeting-recorder.desktop  meeting-recorder.service  postinst  prerm
pool/main/m/meeting-recorder/: meeting-recorder_0.1.1_all.deb  meeting-recorder_0.1.2_all.deb  meeting-recorder_0.2.0_all.deb  meeting-recorder_0.2.1_all.deb  meeting-recorder_0.3.0_all.deb  meeting-recorder_0.3.1_all.deb  meeting-recorder_0.3.2_all.deb  meeting-recorder_0.3.3_all.deb  meeting-recorder_0.3.4_all.deb  meeting-recorder_0.3.5_all.deb
tests/: run_tests.py  test_controller.py  test_detector.py  test_recorder.py
tests/fixtures/: source_outputs_firefox.txt  source_outputs_music.txt
